--- a/prod_env/prod_create_serving.ipynb
+++ b/prod_env/prod_create_serving.ipynb
@@ -62,27 +62,38 @@
     "        UC_CATALOG = pipeline_cfg[\"model\"][\"catalog\"]\n",
     "        UC_SCHEMA = pipeline_cfg[\"model\"][\"schema\"]\n",
     "        BASE_NAME = pipeline_cfg[\"model\"][\"base_name\"]\n",
-    "        \n",
-    "        self.MODEL_NAME = f\"{UC_CATALOG}.{UC_SCHEMA}.{BASE_NAME}_{MODEL_TYPE}\"\n",
+    "\n",
+    "        # ✅ NEW: Use dynamic naming rule from YAML\n",
+    "        self.MODEL_NAME = pipeline_cfg[\"model\"][\"naming\"][\"format\"].format(\n",
+    "            catalog=UC_CATALOG,\n",
+    "            schema=UC_SCHEMA,\n",
+    "            base_name=BASE_NAME,\n",
+    "            model_type=MODEL_TYPE\n",
+    "        )\n",
     "        self.MODEL_TYPE = MODEL_TYPE\n",
-    "        \n",
-    "        self.ENDPOINT_NAME = f\"{BASE_NAME.replace('_', '-')}-{MODEL_TYPE}-prod\"\n",
-    "        \n",
+    "\n",
+    "        # ✅ NEW: Use config-driven endpoint naming template\n",
+    "        endpoint_format = pipeline_cfg[\"serving\"][\"endpoint_name_format\"]\n",
+    "        self.ENDPOINT_NAME = endpoint_format.format(\n",
+    "            base_name=BASE_NAME.replace(\"_\", \"-\"),\n",
+    "            model_type=MODEL_TYPE\n",
+    "        )\n",
+    "\n",
     "        self.PRODUCTION_ALIAS = pipeline_cfg[\"aliases\"][\"production\"]\n",
     "        self.STAGING_ALIAS = pipeline_cfg[\"aliases\"][\"staging\"]\n",
-    "        \n",
+    "\n",
     "        serving_cfg = pipeline_cfg.get(\"serving\", {})\n",
     "        self.WORKLOAD_SIZE = serving_cfg.get(\"workload_size\", \"Small\")\n",
     "        self.SCALE_TO_ZERO = serving_cfg.get(\"scale_to_zero_enabled\", True)\n",
     "        self.MIN_PROVISIONED_THROUGHPUT = serving_cfg.get(\"min_provisioned_throughput\", 0)\n",
     "        self.MAX_PROVISIONED_THROUGHPUT = serving_cfg.get(\"max_provisioned_throughput\", 0)\n",
-    "        \n",
+    "\n",
     "        self.WORKLOAD_TYPE = serving_cfg.get(\"workload_type\", \"CPU\")\n",
     "        self.ENVIRONMENT_VARS = serving_cfg.get(\"environment_vars\", {})\n",
-    "        \n",
+    "\n",
     "        self.DEPLOYMENT_TIMEOUT = serving_cfg.get(\"deployment_timeout\", 1800)\n",
     "        self.STATUS_CHECK_INTERVAL = serving_cfg.get(\"status_check_interval\", 15)\n",
-    "        \n",
+    "\n",
     "        self.SLACK_ENABLED = pipeline_cfg[\"notifications\"][\"enabled\"]\n",
     "        self.SLACK_WEBHOOK_URL = self._get_slack_webhook()\n",
     "\n",
