--- a/prod_env/prod_inference.ipynb
+++ b/prod_env/prod_inference.ipynb
@@ -30,26 +30,37 @@
     "import os\n",
     "\n",
     "try:\n",
-    "    # ← FIXED: Direct path instead of __file__\n",
     "    config_path = \"/Workspace/Repos/vipultak7171@gmail.com/ml-credit-risk/dev_env/pipeline_config.yml\"\n",
     "    \n",
     "    if not os.path.exists(config_path):\n",
-    "        config_path = \"pipeline_config.yml\"  # Fallback\n",
+    "        config_path = \"pipeline_config.yml\"  # fallback if repo path fails\n",
     "\n",
     "    with open(config_path, \"r\") as f:\n",
     "        pipeline_cfg = yaml.safe_load(f)\n",
     "\n",
     "    MODEL_TYPE = pipeline_cfg[\"model\"][\"type\"]\n",
     "    BASE_NAME = pipeline_cfg[\"model\"][\"base_name\"]\n",
-    "    ENDPOINT_NAME = f\"{BASE_NAME.replace('_', '-')}-{MODEL_TYPE}-prod\"\n",
+    "\n",
+    "    # ✅ NEW: Dynamic endpoint name from YAML format rule\n",
+    "    ENDPOINT_NAME = pipeline_cfg[\"serving\"][\"endpoint_name_format\"].format(\n",
+    "        base_name=BASE_NAME.replace(\"_\", \"-\"),\n",
+    "        model_type=MODEL_TYPE\n",
+    "    )\n",
     "\n",
     "    data_cfg = pipeline_cfg[\"data\"]\n",
     "    INPUT_TABLE = data_cfg[\"input_table\"]\n",
-    "    OUTPUT_TABLE = f\"{pipeline_cfg['model']['catalog']}.{pipeline_cfg['model']['schema']}.prod_inference_{MODEL_TYPE}\"\n",
     "    FEATURES = data_cfg[\"features\"]\n",
     "    LABEL = data_cfg[\"label\"]\n",
     "\n",
-    "    BATCH_SIZE = pipeline_cfg.get(\"inference\", {}).get(\"batch_size\", 100)\n",
+    "    # ✅ NEW: Dynamic output table based on YAML format rule\n",
+    "    inference_cfg = pipeline_cfg.get(\"inference\", {})\n",
+    "    OUTPUT_TABLE = inference_cfg[\"output_table_format\"].format(\n",
+    "        catalog=pipeline_cfg[\"model\"][\"catalog\"],\n",
+    "        schema=pipeline_cfg[\"model\"][\"schema\"],\n",
+    "        model_type=MODEL_TYPE\n",
+    "    )\n",
+    "\n",
+    "    BATCH_SIZE = inference_cfg.get(\"batch_size\", 100)\n",
     "\n",
     "    print(f\"📌 Using configs:\")\n",
     "    print(f\"   ➤ Endpoint: {ENDPOINT_NAME}\")\n",
@@ -60,7 +71,7 @@
     "except Exception as e:\n",
     "    print(f\"❌ Failed to load config: {e}\")\n",
     "    traceback.print_exc()\n",
-    "    sys.exit(1)  # ← FIXED: Changed from dbutils.notebook.exit()\n",
+    "    sys.exit(1)\n",
     " \n",
     "# 2️⃣ Initialize clients\n",
     "\n",
@@ -72,7 +83,7 @@
     "except Exception as e:\n",
     "    print(f\"❌ Initialization failed: {e}\")\n",
     "    traceback.print_exc()\n",
-    "    sys.exit(1)  # ← FIXED: Changed from dbutils.notebook.exit()\n",
+    "    sys.exit(1)\n",
     " \n",
     "# 3️⃣ Load input data\n",
     " \n",
@@ -94,7 +105,7 @@
     "except Exception as e:\n",
     "    print(f\"❌ Data load error: {e}\")\n",
     "    traceback.print_exc()\n",
-    "    sys.exit(1)  # ← FIXED: Changed from dbutils.notebook.exit()\n",
+    "    sys.exit(1)\n",
     " \n",
     "# 4️⃣ Run inference using Serving Endpoint\n",
     "\n",
@@ -117,7 +128,6 @@
     "\n",
     "        predictions.extend(response.predictions)\n",
     "        \n",
-    "        # Show progress\n",
     "        if (i + 1) % 10 == 0 or (i + 1) == n_batches:\n",
     "            print(f\"   Processed batch {i+1}/{n_batches}\")\n",
     "\n",
@@ -167,7 +177,6 @@
     "        \"f1\": f1_score(y_true, y_pred, zero_division=0),\n",
     "    }\n",
     "\n",
-    "    # Optional ROC\n",
     "    try:\n",
     "        metrics[\"roc_auc\"] = roc_auc_score(y_true, y_pred)\n",
     "    except:\n",
@@ -192,8 +201,7 @@
     "print(f\"📌 Endpoint       : {ENDPOINT_NAME}\")\n",
     "print(\"=\"*80)\n",
     "\n",
-    "# ← FIXED: sys.exit(0) instead of dbutils.notebook.exit(\"SUCCESS\")\n",
-    "print(\"✅ Script completed successfully\")"
+    "print(\"✅ Script completed successfully\")\n"
    ]
   }
  ],
