--- a/dev_env/train.ipynb
+++ b/dev_env/train.ipynb
@@ -31,6 +31,9 @@
     "from mlflow.models.signature import infer_signature\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.ml.linalg import VectorUDT\n",
+    "from sklearn.pipeline import Pipeline   # ← NEW\n",
+    "import joblib\n",
+    "import os\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
@@ -130,14 +133,28 @@
     "            **params\n",
     "        )\n",
     "\n",
-    "        model.fit(X_train, y_train)\n",
+    "        # ------------------- 🛠 NEW BUNDLE MODEL PIPELINE -------------------\n",
+    "        # Load preprocessing model path from config (already trained)\n",
+    "        preprocessor_path = pipeline_cfg[\"preprocessing\"][\"pipeline_models\"][\"onehot_model\"]\n",
+    "\n",
+    "        # Load fitted preprocessing transform\n",
+    "        preprocessor = joblib.load(preprocessor_path)\n",
+    "\n",
+    "        # Build pipeline\n",
+    "        model_pipeline = Pipeline([\n",
+    "            (\"preprocessor\", preprocessor),\n",
+    "            (\"model\", model)\n",
+    "        ])\n",
+    "        # ---------------------------------------------------------------\n",
+    "\n",
+    "        model_pipeline.fit(X_train, y_train)\n",
     "\n",
     "        # Train predictions\n",
-    "        y_train_pred = model.predict(X_train)\n",
+    "        y_train_pred = model_pipeline.predict(X_train)\n",
     "        \n",
     "        # Test predictions\n",
-    "        y_test_pred = model.predict(X_test)\n",
-    "        y_test_proba = model.predict_proba(X_test)[:, 1]\n",
+    "        y_test_pred = model_pipeline.predict(X_test)\n",
+    "        y_test_proba = model_pipeline.predict_proba(X_test)[:, 1]\n",
     "\n",
     "        metrics_dict = {\n",
     "            \"train_accuracy\": accuracy_score(y_train, y_train_pred),\n",
@@ -151,16 +168,17 @@
     "        for metric_name, metric_value in metrics_dict.items():\n",
     "            mlflow.log_metric(metric_name, metric_value)\n",
     "\n",
-    "        signature = infer_signature(X_train, model.predict(X_train))\n",
+    "        signature = infer_signature(X_train, model_pipeline.predict(X_train))\n",
     "\n",
+    "        # ------------------- 🛠 STORE PIPELINE MODEL -------------------\n",
     "        mlflow.sklearn.log_model(\n",
-    "            model,\n",
+    "            sk_model=model_pipeline,\n",
     "            artifact_path=MODEL_ARTIFACT_PATH,\n",
-    "            signature=signature,\n",
-    "            registered_model_name=None\n",
+    "            signature=signature\n",
     "        )\n",
+    "        # --------------------------------------------------------------\n",
     "\n",
-    "        # --- ⭐ NEW FEATURE IMPORTANCE DELTA LOGIC ADDED HERE ⭐ ---\n",
+    "        # --- Feature Importance Logging (unchanged) ---\n",
     "        if hasattr(model, 'feature_importances_'):\n",
     "            feature_importance = pd.DataFrame({\n",
     "                'feature_index': range(len(model.feature_importances_)),\n",
@@ -210,7 +228,7 @@
     "        )\n",
     "        results.append({ \"name\": exp[\"name\"], \"run_id\": run_id, \"metrics\": metrics })\n",
     "\n",
-    "    print(\"\\n🎉 Training completed successfully!\")"
+    "    print(\"\\n🎉 Training completed successfully!\")\n"
    ]
   }
  ],
