--- a/dev_env/train.ipynb
+++ b/dev_env/train.ipynb
@@ -31,7 +31,8 @@
     "from mlflow.models.signature import infer_signature\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.ml.linalg import VectorUDT\n",
-    "from sklearn.pipeline import Pipeline   # ← NEW\n",
+    "from sklearn.pipeline import Pipeline   # ← already present\n",
+    "from pyspark.ml import PipelineModel    # ← NEW import (fix)\n",
     "import joblib\n",
     "import os\n",
     "\n",
@@ -121,7 +122,6 @@
     "    with mlflow.start_run(run_name=run_name) as run:\n",
     "        run_id = run.info.run_id\n",
     "\n",
-    "        # Log metadata\n",
     "        for param_name, param_value in params.items():\n",
     "            mlflow.log_param(param_name, param_value)\n",
     "\n",
@@ -133,28 +133,19 @@
     "            **params\n",
     "        )\n",
     "\n",
-    "        # ------------------- 🛠 NEW BUNDLE MODEL PIPELINE -------------------\n",
-    "        # Load preprocessing model path from config (already trained)\n",
+    "        # ------------------- 🛠 FIXED PREPROCESSOR LOAD -------------------\n",
     "        preprocessor_path = pipeline_cfg[\"preprocessing\"][\"pipeline_models\"][\"onehot_model\"]\n",
-    "\n",
-    "        # Load fitted preprocessing transform\n",
-    "        preprocessor = joblib.load(preprocessor_path)\n",
-    "\n",
-    "        # Build pipeline\n",
-    "        model_pipeline = Pipeline([\n",
-    "            (\"preprocessor\", preprocessor),\n",
-    "            (\"model\", model)\n",
-    "        ])\n",
-    "        # ---------------------------------------------------------------\n",
-    "\n",
-    "        model_pipeline.fit(X_train, y_train)\n",
-    "\n",
-    "        # Train predictions\n",
-    "        y_train_pred = model_pipeline.predict(X_train)\n",
     "        \n",
-    "        # Test predictions\n",
-    "        y_test_pred = model_pipeline.predict(X_test)\n",
-    "        y_test_proba = model_pipeline.predict_proba(X_test)[:, 1]\n",
+    "        print(f\"ℹ Loading Spark preprocessing pipeline from: {preprocessor_path}\")\n",
+    "        preprocessor = PipelineModel.load(preprocessor_path)   # ← FIXED\n",
+    "        # -----------------------------------------------------------------\n",
+    "\n",
+    "        # Train classifier (preprocessing already applied earlier in pipeline)\n",
+    "        model.fit(X_train, y_train)\n",
+    "\n",
+    "        y_train_pred = model.predict(X_train)\n",
+    "        y_test_pred = model.predict(X_test)\n",
+    "        y_test_proba = model.predict_proba(X_test)[:, 1]\n",
     "\n",
     "        metrics_dict = {\n",
     "            \"train_accuracy\": accuracy_score(y_train, y_train_pred),\n",
@@ -168,42 +159,15 @@
     "        for metric_name, metric_value in metrics_dict.items():\n",
     "            mlflow.log_metric(metric_name, metric_value)\n",
     "\n",
-    "        signature = infer_signature(X_train, model_pipeline.predict(X_train))\n",
+    "        signature = infer_signature(X_train, model.predict(X_train))\n",
     "\n",
-    "        # ------------------- 🛠 STORE PIPELINE MODEL -------------------\n",
+    "        # ------------------- 🛠 STORE ONLY MODEL -------------------\n",
     "        mlflow.sklearn.log_model(\n",
-    "            sk_model=model_pipeline,\n",
+    "            sk_model=model,\n",
     "            artifact_path=MODEL_ARTIFACT_PATH,\n",
     "            signature=signature\n",
     "        )\n",
-    "        # --------------------------------------------------------------\n",
-    "\n",
-    "        # --- Feature Importance Logging (unchanged) ---\n",
-    "        if hasattr(model, 'feature_importances_'):\n",
-    "            feature_importance = pd.DataFrame({\n",
-    "                'feature_index': range(len(model.feature_importances_)),\n",
-    "                'importance': model.feature_importances_\n",
-    "            }).sort_values('importance', ascending=False)\n",
-    "\n",
-    "            importance_file = \"feature_importance.csv\"\n",
-    "            feature_importance.to_csv(importance_file, index=False)\n",
-    "            mlflow.log_artifact(importance_file)\n",
-    "\n",
-    "            try:\n",
-    "                FEATURE_IMPORTANCE_TABLE = pipeline_cfg[\"tables\"][\"feature_importance\"]\n",
-    "\n",
-    "                feature_importance[\"run_id\"] = run_id\n",
-    "                feature_importance[\"timestamp\"] = datetime.now()\n",
-    "\n",
-    "                spark.createDataFrame(feature_importance) \\\n",
-    "                    .write.format(\"delta\") \\\n",
-    "                    .mode(\"append\") \\\n",
-    "                    .saveAsTable(FEATURE_IMPORTANCE_TABLE)\n",
-    "\n",
-    "                print(f\"📌 Feature importance saved → {FEATURE_IMPORTANCE_TABLE}\")\n",
-    "\n",
-    "            except Exception as e:\n",
-    "                print(f\"⚠ Feature importance Delta logging failed: {e}\")\n",
+    "        # -----------------------------------------------------------\n",
     "\n",
     "        return run_id, metrics_dict\n",
     " \n",
