--- a/dev_env/register.ipynb
+++ b/dev_env/register.ipynb
@@ -118,7 +118,7 @@
     "    raise Exception(f\"Experiment '{config.EXPERIMENT_NAME}' not found!\")\n",
     "\n",
     "\n",
-    "# ---------------------- FETCH ALL RUNS ----------------------\n",
+    "# ---------------------- FIXED: FETCH ALL RUNS ----------------------\n",
     "\n",
     "def get_all_runs() -> List[Dict]:\n",
     "    print(\"\\n📍 Fetching ALL experiment runs...\")\n",
@@ -129,17 +129,22 @@
     "        max_results=500\n",
     "    )\n",
     "\n",
-    "    return [\n",
-    "        {\n",
+    "    processed_runs = []\n",
+    "\n",
+    "    for run in runs:\n",
+    "        # ✅ FIX → dynamically resolve correct logged model URI\n",
+    "        model_uri = client.get_run(run.info.run_id).info.artifact_uri + f\"/{config.ARTIFACT_PATH}\"\n",
+    "\n",
+    "        processed_runs.append({\n",
     "            \"run_id\": run.info.run_id,\n",
     "            \"run_name\": run.info.run_name or \"unnamed_run\",\n",
     "            \"metrics\": {m: run.data.metrics.get(m) for m in config.METRICS_TO_COMPARE},\n",
     "            \"params\": run.data.params,\n",
     "            \"primary_metric\": run.data.metrics.get(config.PRIMARY_METRIC),\n",
-    "            \"model_uri\": f\"runs:/{run.info.run_id}/{config.ARTIFACT_PATH}\"\n",
-    "        }\n",
-    "        for run in runs\n",
-    "    ]\n",
+    "            \"model_uri\": model_uri\n",
+    "        })\n",
+    "\n",
+    "    return processed_runs\n",
     "\n",
     "\n",
     "# ---------------------- DUPLICATE DETECTION ----------------------\n",
@@ -169,7 +174,7 @@
     "    return False\n",
     "\n",
     "\n",
-    "# ---------------------- REGISTER MODEL (UPDATED) ----------------------\n",
+    "# ---------------------- REGISTER MODEL ----------------------\n",
     "\n",
     "def register_model(model: Dict):\n",
     "    if is_duplicate_model(model):\n",
@@ -181,7 +186,6 @@
     "    print(f\"🎯 Registered version: {version}\")\n",
     "    slack.send(f\"✅ Model registered: {config.MODEL_NAME} (v{version})\", \"success\")\n",
     "\n",
-    "    # ------ ⭐ ADDED METADATA/TAGS SECTION ⭐ ------\n",
     "    try:\n",
     "        client.set_model_version_tag(config.MODEL_NAME, version, \"run_name\", model[\"run_name\"])\n",
     "        client.set_model_version_tag(config.MODEL_NAME, version, \"primary_metric\", config.PRIMARY_METRIC)\n",
@@ -230,7 +234,7 @@
     "    print(\"📄 Logged in evaluation table\")\n",
     "\n",
     "\n",
-    "# ---------------------- MAIN EXECUTION ----------------------\n",
+    "# ---------------------- MAIN ----------------------\n",
     "\n",
     "def main():\n",
     "    print(\"\\n🚀 Scanning all model runs...\")\n",
