fix the code issue

--- a/dev_env/train.ipynb
+++ b/dev_env/train.ipynb
@@ -11,7 +11,7 @@
    },
    "outputs": [],
    "source": [
-    "# 🚀 CREDIT RISK CLASSIFICATION TRAINING - FIXED VERSION\n",
+    "# 🚀 CREDIT RISK CLASSIFICATION TRAINING - FINAL PIPELINE VERSION\n",
     "\n",
     "%pip install scikit-learn pyyaml\n",
     "\n",
@@ -20,179 +20,126 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import warnings\n",
-    "import time\n",
     "from datetime import datetime\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import (\n",
-    "    accuracy_score, precision_score, recall_score, f1_score, \n",
-    "    roc_auc_score, confusion_matrix\n",
+    "    accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
     ")\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
     "from mlflow.models.signature import infer_signature\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.ml.linalg import VectorUDT\n",
-    "from sklearn.pipeline import Pipeline   # ← already present\n",
-    "from pyspark.ml import PipelineModel    # ← NEW import (fix)\n",
-    "import joblib\n",
-    "import os\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "print(\"=\" * 80)\n",
     "print(\"🚀 CREDIT RISK CLASSIFICATION TRAINING PIPELINE\")\n",
     "print(\"=\" * 80)\n",
-    " \n",
-    "# ✅ LOAD PIPELINE CONFIGURATION\n",
     "\n",
-    "print(\"\\n📋 Step 1: Loading pipeline configuration...\")\n",
+    "# -----------------------------------------\n",
+    "# 1️⃣ Load pipeline config\n",
+    "# -----------------------------------------\n",
+    "with open(\"pipeline_config.yml\", \"r\") as f:\n",
+    "    pipeline_cfg = yaml.safe_load(f)\n",
     "\n",
-    "try:\n",
-    "    with open(\"pipeline_config.yml\", \"r\") as f:\n",
-    "        pipeline_cfg = yaml.safe_load(f)\n",
+    "MODEL_TYPE = pipeline_cfg[\"model\"][\"type\"]\n",
+    "EXPERIMENT_NAME = pipeline_cfg[\"experiment\"][\"name\"]\n",
+    "MODEL_ARTIFACT_PATH = pipeline_cfg[\"experiment\"][\"artifact_path\"]\n",
+    "PREPROCESSED_TABLE = pipeline_cfg[\"data\"][\"input_table\"]   # <-- RAW table for final preprocessing\n",
+    "FEATURES = pipeline_cfg[\"data\"][\"features\"]\n",
+    "LABEL_COL = pipeline_cfg[\"data\"][\"label\"]\n",
     "\n",
-    "    MODEL_TYPE = pipeline_cfg[\"model\"][\"type\"]\n",
-    "    CATALOG = pipeline_cfg[\"model\"][\"catalog\"]\n",
-    "    SCHEMA = pipeline_cfg[\"model\"][\"schema\"]\n",
-    "    BASE_NAME = pipeline_cfg[\"model\"][\"base_name\"]\n",
-    "    \n",
-    "    EXPERIMENT_NAME = pipeline_cfg[\"experiment\"][\"name\"]\n",
-    "    MODEL_ARTIFACT_PATH = pipeline_cfg[\"experiment\"][\"artifact_path\"]\n",
-    "    RUN_NAME_PREFIX = pipeline_cfg[\"experiment\"][\"run_name_prefix\"]\n",
+    "TEST_SIZE = pipeline_cfg[\"data\"][\"split\"][\"test_size\"]\n",
+    "RANDOM_STATE = pipeline_cfg[\"data\"][\"split\"][\"random_state\"]\n",
+    "STRATIFY = pipeline_cfg[\"data\"][\"split\"][\"stratify\"]\n",
     "\n",
-    "    PREPROCESSED_TABLE = pipeline_cfg[\"data\"][\"preprocessed_table\"]\n",
-    "    LABEL_COL = \"label\"\n",
-    "    \n",
-    "    TEST_SIZE = pipeline_cfg[\"data\"][\"split\"][\"test_size\"]\n",
-    "    RANDOM_STATE = pipeline_cfg[\"data\"][\"split\"][\"random_state\"]\n",
-    "    STRATIFY = pipeline_cfg[\"data\"][\"split\"][\"stratify\"]\n",
+    "print(\"✅ Config loaded\\n\")\n",
     "\n",
-    "    METRICS_CONFIG = pipeline_cfg[\"metrics\"][\"classification\"]\n",
-    "    PRIMARY_METRIC = METRICS_CONFIG[\"primary_metric\"]\n",
-    "    DIRECTION = METRICS_CONFIG[\"direction\"]\n",
-    "    TRACKED_METRICS = METRICS_CONFIG[\"tracked_metrics\"]\n",
-    "    THRESHOLD_METRICS = METRICS_CONFIG[\"threshold_metrics\"]\n",
     "\n",
-    "    print(f\"✅ Pipeline configuration loaded successfully!\")\n",
+    "# -----------------------------------------\n",
+    "# 2️⃣ Load Raw Data\n",
+    "# -----------------------------------------\n",
+    "spark = SparkSession.builder.appName(\"CreditRiskTraining\").getOrCreate()\n",
     "\n",
-    "except Exception as e:\n",
-    "    print(f\"❌ ERROR loading pipeline configuration: {e}\")\n",
-    "    raise\n",
+    "print(f\"📦 Loading RAW data → {PREPROCESSED_TABLE}\")\n",
+    "df = spark.read.table(PREPROCESSED_TABLE).toPandas()\n",
     "\n",
-    "print(\"=\" * 80)\n",
-    " \n",
-    "# ----- Load experiment configurations -----\n",
+    "X = df[FEATURES]\n",
+    "y = df[LABEL_COL]\n",
     "\n",
-    "def load_experiment_configs(path=\"config.yml\"):\n",
-    "    print(f\"\\n📄 Step 2: Loading experiment configurations...\")\n",
-    "    \n",
-    "    with open(path, \"r\") as f:\n",
-    "        config = yaml.safe_load(f)\n",
     "\n",
-    "    return config\n",
-    " \n",
-    "# ----- Convert PySpark Vector to array -----\n",
+    "# -----------------------------------------\n",
+    "# 3️⃣ Build preprocessing + model pipeline\n",
+    "# -----------------------------------------\n",
     "\n",
-    "def vector_to_array(v):\n",
-    "    return v.toArray() if hasattr(v, 'toArray') else np.array(v)\n",
-    " \n",
-    "# ----- Load preprocessed Delta table -----\n",
+    "categorical_cols = [col for col in X.columns if X[col].dtype == \"object\"]\n",
+    "numeric_cols = [col for col in X.columns if col not in categorical_cols]\n",
     "\n",
-    "def load_preprocessed_data(spark):\n",
-    "    print(f\"\\n📦 Loading PREPROCESSED data...\")\n",
-    "    df = spark.read.format(\"delta\").table(PREPROCESSED_TABLE)\n",
-    "    df_pd = df.toPandas()\n",
+    "print(f\"🔧 Detected {len(categorical_cols)} categorical features\")\n",
+    "print(f\"🔧 Detected {len(numeric_cols)} numerical features\")\n",
     "\n",
-    "    X = np.array([vector_to_array(row) for row in df_pd['features']])\n",
-    "    y = df_pd['label'].values\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        (\"categorical\", OneHotEncoder(handle_unknown=\"ignore\"), categorical_cols),\n",
+    "        (\"numeric\", StandardScaler(), numeric_cols)\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "    return X, y\n",
-    " \n",
-    "# ----- Train a single experiment -----\n",
+    "rf_model = RandomForestClassifier(random_state=RANDOM_STATE)\n",
     "\n",
-    "def train_single_experiment(X, y, params, run_name):\n",
+    "full_pipeline = Pipeline([\n",
+    "    (\"preprocessing\", preprocessor),\n",
+    "    (\"model\", rf_model)\n",
+    "])\n",
     "\n",
-    "    stratify_param = y if STRATIFY else None\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(\n",
-    "        X, y, \n",
-    "        test_size=TEST_SIZE, \n",
-    "        random_state=RANDOM_STATE,\n",
-    "        stratify=stratify_param\n",
+    "\n",
+    "# -----------------------------------------\n",
+    "# 4️⃣ Train Model\n",
+    "# -----------------------------------------\n",
+    "stratify_option = y if STRATIFY else None\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=TEST_SIZE, stratify=stratify_option, random_state=RANDOM_STATE\n",
+    ")\n",
+    "\n",
+    "mlflow.set_tracking_uri(\"databricks\")\n",
+    "mlflow.set_registry_uri(\"databricks-uc\")\n",
+    "mlflow.set_experiment(EXPERIMENT_NAME)\n",
+    "\n",
+    "with mlflow.start_run():\n",
+    "\n",
+    "    print(\"⚙️ Training model...\")\n",
+    "    full_pipeline.fit(X_train, y_train)\n",
+    "\n",
+    "    y_pred = full_pipeline.predict(X_test)\n",
+    "    y_proba = full_pipeline.predict_proba(X_test)[:, 1]\n",
+    "\n",
+    "    # Metrics\n",
+    "    metrics = {\n",
+    "        \"test_accuracy\": accuracy_score(y_test, y_pred),\n",
+    "        \"test_precision\": precision_score(y_test, y_pred, zero_division=0),\n",
+    "        \"test_recall\": recall_score(y_test, y_pred, zero_division=0),\n",
+    "        \"test_f1\": f1_score(y_test, y_pred, zero_division=0),\n",
+    "        \"test_roc_auc\": roc_auc_score(y_test, y_proba),\n",
+    "    }\n",
+    "\n",
+    "    for k, v in metrics.items():\n",
+    "        mlflow.log_metric(k, v)\n",
+    "\n",
+    "    signature = infer_signature(X_train, full_pipeline.predict(X_train))\n",
+    "\n",
+    "    print(\"📦 Saving model pipeline to MLflow registry\")\n",
+    "    mlflow.sklearn.log_model(\n",
+    "        sk_model=full_pipeline,\n",
+    "        artifact_path=MODEL_ARTIFACT_PATH,\n",
+    "        signature=signature\n",
     "    )\n",
     "\n",
-    "    with mlflow.start_run(run_name=run_name) as run:\n",
-    "        run_id = run.info.run_id\n",
-    "\n",
-    "        for param_name, param_value in params.items():\n",
-    "            mlflow.log_param(param_name, param_value)\n",
-    "\n",
-    "        if \"random_state\" in params:\n",
-    "            params.pop(\"random_state\")\n",
-    "\n",
-    "        model = RandomForestClassifier(\n",
-    "            random_state=RANDOM_STATE,\n",
-    "            **params\n",
-    "        )\n",
-    "\n",
-    "        # ------------------- 🛠 FIXED PREPROCESSOR LOAD -------------------\n",
-    "        preprocessor_path = pipeline_cfg[\"preprocessing\"][\"pipeline_models\"][\"onehot_model\"]\n",
-    "        \n",
-    "        print(f\"ℹ Loading Spark preprocessing pipeline from: {preprocessor_path}\")\n",
-    "        preprocessor = PipelineModel.load(preprocessor_path)   # ← FIXED\n",
-    "        # -----------------------------------------------------------------\n",
-    "\n",
-    "        # Train classifier (preprocessing already applied earlier in pipeline)\n",
-    "        model.fit(X_train, y_train)\n",
-    "\n",
-    "        y_train_pred = model.predict(X_train)\n",
-    "        y_test_pred = model.predict(X_test)\n",
-    "        y_test_proba = model.predict_proba(X_test)[:, 1]\n",
-    "\n",
-    "        metrics_dict = {\n",
-    "            \"train_accuracy\": accuracy_score(y_train, y_train_pred),\n",
-    "            \"test_accuracy\": accuracy_score(y_test, y_test_pred),\n",
-    "            \"test_precision\": precision_score(y_test, y_test_pred, zero_division=0),\n",
-    "            \"test_recall\": recall_score(y_test, y_test_pred, zero_division=0),\n",
-    "            \"test_f1\": f1_score(y_test, y_test_pred, zero_division=0),\n",
-    "            \"test_roc_auc\": roc_auc_score(y_test, y_test_proba)\n",
-    "        }\n",
-    "\n",
-    "        for metric_name, metric_value in metrics_dict.items():\n",
-    "            mlflow.log_metric(metric_name, metric_value)\n",
-    "\n",
-    "        signature = infer_signature(X_train, model.predict(X_train))\n",
-    "\n",
-    "        # ------------------- 🛠 STORE ONLY MODEL -------------------\n",
-    "        mlflow.sklearn.log_model(\n",
-    "            sk_model=model,\n",
-    "            artifact_path=MODEL_ARTIFACT_PATH,\n",
-    "            signature=signature\n",
-    "        )\n",
-    "        # -----------------------------------------------------------\n",
-    "\n",
-    "        return run_id, metrics_dict\n",
-    " \n",
-    "# ----- MAIN EXECUTION -----\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "\n",
-    "    mlflow.set_tracking_uri(\"databricks\")\n",
-    "    mlflow.set_registry_uri(\"databricks-uc\")\n",
-    "    mlflow.set_experiment(EXPERIMENT_NAME)\n",
-    "\n",
-    "    spark = SparkSession.builder.appName(\"CreditRiskTraining\").getOrCreate()\n",
-    "\n",
-    "    X, y = load_preprocessed_data(spark)\n",
-    "    config = load_experiment_configs()\n",
-    "\n",
-    "    results = []\n",
-    "\n",
-    "    for exp in config[\"experiments\"]:\n",
-    "        run_id, metrics = train_single_experiment(\n",
-    "            X, y, exp[\"params\"], f\"{RUN_NAME_PREFIX}_{exp['name']}\"\n",
-    "        )\n",
-    "        results.append({ \"name\": exp[\"name\"], \"run_id\": run_id, \"metrics\": metrics })\n",
-    "\n",
-    "    print(\"\\n🎉 Training completed successfully!\")\n"
+    "print(\"\\n🎉 Training completed successfully!\")\n",
+    "print(\"🚀 Model saved as full preprocessing + classifier pipeline\")\n"
    ]
   }
  ],
