--- a/dev_env/train.ipynb
+++ b/dev_env/train.ipynb
@@ -11,7 +11,7 @@
    },
    "outputs": [],
    "source": [
-    "# 🚀 CREDIT RISK CLASSIFICATION TRAINING - FINAL PIPELINE VERSION\n",
+    "# 🚀 CREDIT RISK CLASSIFICATION TRAINING - FINAL FULL PIPELINE WITH CONFIG SUPPORT\n",
     "\n",
     "%pip install scikit-learn pyyaml\n",
     "\n",
@@ -31,16 +31,15 @@
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
     "from mlflow.models.signature import infer_signature\n",
     "from pyspark.sql import SparkSession\n",
-    "from pyspark.ml.linalg import VectorUDT\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "print(\"=\" * 80)\n",
-    "print(\"🚀 CREDIT RISK CLASSIFICATION TRAINING PIPELINE\")\n",
+    "print(\"🚀 CREDIT RISK CLASSIFICATION - CONFIG DRIVEN TRAINING\")\n",
     "print(\"=\" * 80)\n",
     "\n",
     "# -----------------------------------------\n",
-    "# 1️⃣ Load pipeline config\n",
+    "# 1️⃣ Load pipeline config (pipeline_config.yml)\n",
     "# -----------------------------------------\n",
     "with open(\"pipeline_config.yml\", \"r\") as f:\n",
     "    pipeline_cfg = yaml.safe_load(f)\n",
@@ -48,7 +47,7 @@
     "MODEL_TYPE = pipeline_cfg[\"model\"][\"type\"]\n",
     "EXPERIMENT_NAME = pipeline_cfg[\"experiment\"][\"name\"]\n",
     "MODEL_ARTIFACT_PATH = pipeline_cfg[\"experiment\"][\"artifact_path\"]\n",
-    "PREPROCESSED_TABLE = pipeline_cfg[\"data\"][\"input_table\"]   # <-- RAW table for final preprocessing\n",
+    "RAW_INPUT_TABLE = pipeline_cfg[\"data\"][\"input_table\"]\n",
     "FEATURES = pipeline_cfg[\"data\"][\"features\"]\n",
     "LABEL_COL = pipeline_cfg[\"data\"][\"label\"]\n",
     "\n",
@@ -56,30 +55,40 @@
     "RANDOM_STATE = pipeline_cfg[\"data\"][\"split\"][\"random_state\"]\n",
     "STRATIFY = pipeline_cfg[\"data\"][\"split\"][\"stratify\"]\n",
     "\n",
-    "print(\"✅ Config loaded\\n\")\n",
-    "\n",
+    "print(\"✅ Pipeline config loaded.\")\n",
     "\n",
     "# -----------------------------------------\n",
-    "# 2️⃣ Load Raw Data\n",
+    "# 2️⃣ Load experiment config (config.yml)\n",
+    "# -----------------------------------------\n",
+    "with open(\"config.yml\", \"r\") as f:\n",
+    "    experiment_cfg = yaml.safe_load(f)\n",
+    "\n",
+    "EXPERIMENT_LIST = experiment_cfg[\"experiments\"]\n",
+    "print(f\"🔍 Loaded {len(EXPERIMENT_LIST)} experiment variations.\")\n",
+    "\n",
+    "# -----------------------------------------\n",
+    "# 3️⃣ Load Raw Data (NOT preprocessed)\n",
     "# -----------------------------------------\n",
     "spark = SparkSession.builder.appName(\"CreditRiskTraining\").getOrCreate()\n",
     "\n",
-    "print(f\"📦 Loading RAW data → {PREPROCESSED_TABLE}\")\n",
-    "df = spark.read.table(PREPROCESSED_TABLE).toPandas()\n",
+    "print(f\"📦 Loading RAW data → {RAW_INPUT_TABLE}\")\n",
+    "df = spark.read.table(RAW_INPUT_TABLE).toPandas()\n",
     "\n",
     "X = df[FEATURES]\n",
     "y = df[LABEL_COL]\n",
     "\n",
+    "# 🔥 Convert textual labels (\"yes\", \"no\") → numeric 1/0\n",
+    "if y.dtype == \"object\":\n",
+    "    y = y.map({\"yes\": 1, \"no\": 0}).astype(int)\n",
     "\n",
     "# -----------------------------------------\n",
-    "# 3️⃣ Build preprocessing + model pipeline\n",
+    "# 4️⃣ Setup Shared Preprocessing Pipeline\n",
     "# -----------------------------------------\n",
-    "\n",
     "categorical_cols = [col for col in X.columns if X[col].dtype == \"object\"]\n",
     "numeric_cols = [col for col in X.columns if col not in categorical_cols]\n",
     "\n",
-    "print(f\"🔧 Detected {len(categorical_cols)} categorical features\")\n",
-    "print(f\"🔧 Detected {len(numeric_cols)} numerical features\")\n",
+    "print(f\"🔧 Categorical Features: {len(categorical_cols)}\")\n",
+    "print(f\"🔧 Numeric Features: {len(numeric_cols)}\")\n",
     "\n",
     "preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
@@ -88,58 +97,67 @@
     "    ]\n",
     ")\n",
     "\n",
-    "rf_model = RandomForestClassifier(random_state=RANDOM_STATE)\n",
-    "\n",
-    "full_pipeline = Pipeline([\n",
-    "    (\"preprocessing\", preprocessor),\n",
-    "    (\"model\", rf_model)\n",
-    "])\n",
-    "\n",
-    "\n",
     "# -----------------------------------------\n",
-    "# 4️⃣ Train Model\n",
+    "# 5️⃣ Train model for each config experiment\n",
     "# -----------------------------------------\n",
+    "mlflow.set_tracking_uri(\"databricks\")\n",
+    "mlflow.set_registry_uri(\"databricks-uc\")\n",
+    "mlflow.set_experiment(EXPERIMENT_NAME)\n",
+    "\n",
     "stratify_option = y if STRATIFY else None\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=TEST_SIZE, stratify=stratify_option, random_state=RANDOM_STATE\n",
     ")\n",
     "\n",
-    "mlflow.set_tracking_uri(\"databricks\")\n",
-    "mlflow.set_registry_uri(\"databricks-uc\")\n",
-    "mlflow.set_experiment(EXPERIMENT_NAME)\n",
+    "results = []\n",
     "\n",
-    "with mlflow.start_run():\n",
+    "for exp in EXPERIMENT_LIST:\n",
+    "    \n",
+    "    exp_name = exp[\"name\"]\n",
+    "    params = exp[\"params\"]\n",
     "\n",
-    "    print(\"⚙️ Training model...\")\n",
-    "    full_pipeline.fit(X_train, y_train)\n",
+    "    print(f\"\\n⚙️ Training experiment: {exp_name}\")\n",
     "\n",
-    "    y_pred = full_pipeline.predict(X_test)\n",
-    "    y_proba = full_pipeline.predict_proba(X_test)[:, 1]\n",
+    "    rf_model = RandomForestClassifier(random_state=RANDOM_STATE, **params)\n",
     "\n",
-    "    # Metrics\n",
-    "    metrics = {\n",
-    "        \"test_accuracy\": accuracy_score(y_test, y_pred),\n",
-    "        \"test_precision\": precision_score(y_test, y_pred, zero_division=0),\n",
-    "        \"test_recall\": recall_score(y_test, y_pred, zero_division=0),\n",
-    "        \"test_f1\": f1_score(y_test, y_pred, zero_division=0),\n",
-    "        \"test_roc_auc\": roc_auc_score(y_test, y_proba),\n",
-    "    }\n",
+    "    full_pipeline = Pipeline([\n",
+    "        (\"preprocessing\", preprocessor),\n",
+    "        (\"model\", rf_model)\n",
+    "    ])\n",
     "\n",
-    "    for k, v in metrics.items():\n",
-    "        mlflow.log_metric(k, v)\n",
+    "    with mlflow.start_run(run_name=exp_name):\n",
     "\n",
-    "    signature = infer_signature(X_train, full_pipeline.predict(X_train))\n",
+    "        full_pipeline.fit(X_train, y_train)\n",
     "\n",
-    "    print(\"📦 Saving model pipeline to MLflow registry\")\n",
-    "    mlflow.sklearn.log_model(\n",
-    "        sk_model=full_pipeline,\n",
-    "        artifact_path=MODEL_ARTIFACT_PATH,\n",
-    "        signature=signature\n",
-    "    )\n",
+    "        y_pred = full_pipeline.predict(X_test)\n",
+    "        y_proba = full_pipeline.predict_proba(X_test)[:, 1]\n",
     "\n",
-    "print(\"\\n🎉 Training completed successfully!\")\n",
-    "print(\"🚀 Model saved as full preprocessing + classifier pipeline\")\n"
+    "        # ----- Metrics -----\n",
+    "        metrics = {\n",
+    "            \"test_accuracy\": accuracy_score(y_test, y_pred),\n",
+    "            \"test_precision\": precision_score(y_test, y_pred),\n",
+    "            \"test_recall\": recall_score(y_test, y_pred),\n",
+    "            \"test_f1\": f1_score(y_test, y_pred),\n",
+    "            \"test_roc_auc\": roc_auc_score(y_test, y_proba),\n",
+    "        }\n",
+    "\n",
+    "        for k, v in metrics.items():\n",
+    "            mlflow.log_metric(k, v)\n",
+    "\n",
+    "        signature = infer_signature(X_train, full_pipeline.predict(X_train))\n",
+    "\n",
+    "        mlflow.sklearn.log_model(\n",
+    "            sk_model=full_pipeline,\n",
+    "            artifact_path=MODEL_ARTIFACT_PATH,\n",
+    "            signature=signature\n",
+    "        )\n",
+    "\n",
+    "        results.append((exp_name, metrics))\n",
+    "\n",
+    "print(\"\\n🎉 Training Completed Successfully!\")\n",
+    "print(\"📊 All experiment models logged to MLflow.\")\n",
+    "\n"
    ]
   }
  ],
